Fix home-page overflow

--- a/production/home-banner.scss
+++ b/production/home-banner.scss
@@ -43,7 +43,7 @@
             z-index: -1;
             left: 0;
             bottom: 0;
-            width: 100vw;
+            width: 100%;
         }
     }
 }
